[package]
name = "todo"
version = "0.1.0"
authors = ["Dave Remy <email@daveremy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
eventsourcing= { version = "0.1.3", features = ["orgeventstore"] }
eventsourcing-derive = "0.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }